// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductActions > renders correctly after selecting a size 1`] = `
<div>
  <div
    class="mb-6"
  >
    <h3
      class="font-medium mb-2"
    >
      Select Size
    </h3>
    <div
      class="grid grid-cols-4 gap-2"
    >
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        7
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        7.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        8
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        8.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-primary text-primary-foreground border-primary"
      >
        9
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        9.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        10
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        10.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        11
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        11.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        12
      </button>
    </div>
  </div>
  <div
    class="mb-6"
  >
    <h3
      class="font-medium mb-2"
    >
      Quantity
    </h3>
    <div
      class="flex items-center border border-border rounded w-32"
    >
      <button
        class="px-3 py-1 hover:bg-muted cursor-pointer"
        disabled=""
      >
        -
      </button>
      <input
        class="w-full text-center py-1 border-0 focus:ring-0 bg-transparent"
        min="1"
        type="number"
        value="1"
      />
      <button
        class="px-3 py-1 hover:bg-muted cursor-pointer"
      >
        +
      </button>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer"
    data-slot="button"
  >
    Add to Cart
  </button>
     
</div>
`;

exports[`ProductActions > renders correctly when no size is selected 1`] = `
<div>
  <div
    class="mb-6"
  >
    <h3
      class="font-medium mb-2"
    >
      Select Size
    </h3>
    <div
      class="grid grid-cols-4 gap-2"
    >
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        7
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        7.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        8
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        8.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        9
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        9.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        10
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        10.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        11
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        11.5
      </button>
      <button
        class="py-2 px-4 rounded border cursor-pointer bg-background text-foreground border-border hover:border-primary"
      >
        12
      </button>
    </div>
  </div>
  <div
    class="mb-6"
  >
    <h3
      class="font-medium mb-2"
    >
      Quantity
    </h3>
    <div
      class="flex items-center border border-border rounded w-32"
    >
      <button
        class="px-3 py-1 hover:bg-muted cursor-pointer"
        disabled=""
      >
        -
      </button>
      <input
        class="w-full text-center py-1 border-0 focus:ring-0 bg-transparent"
        min="1"
        type="number"
        value="1"
      />
      <button
        class="px-3 py-1 hover:bg-muted cursor-pointer"
      >
        +
      </button>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer"
    data-slot="button"
  >
    Add to Cart
  </button>
     
</div>
`;
